Front and Back conected and working correctly

--- a/src/api/myenv/pyvenv.cfg
+++ b/src/api/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\regen\AppData\Local\Programs\Python\Python311
+home = /home/codespace/.python/current/bin
 include-system-site-packages = false
-version = 3.11.4
-executable = C:\Users\regen\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\regen\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\regen\Desktop\mi proyecto\my-proyect\src\api\myenv
+version = 3.12.1
+executable = /usr/local/python/3.12.1/bin/python3.12
+command = /home/codespace/.python/current/bin/python -m venv /workspaces/ITransition-Task4-Web-application-with-user-registration-and-authentication./src/api/myenv
