Docker for data and flask

--- a/.env
+++ b/.env
@@ -1,13 +1,18 @@
-# Backend (Flask)
+
+
+# Backend (Flask)2 dec 24
 FLASK_APP=app.py
 FLASK_ENV=production
-DATABASE_URL=postgresql://<usuario>:<contraseña>@<host>:<puerto>/<base_de_datos>
-SECRET_KEY=mi_clave_secreta_aleatoria
+#FLASK_RUN_HOST=0.0.0.0
+
+DATABASE_URL=postgresql://database_9xnf_user:J8wawyfFzqF0sjWrAzETs8ZV8p1NvNbf@dpg-ct8kb568ii6s73cbsem0-a:5432/Database
+
+JWT_SECRET_KEY=secrets.token_hex(32)
+SECRET_KEY=secrets.token_hex(32)
 DEBUG=False
 
-# Frontend (React)
-REACT_APP_API_URL=https://mi-backend-en-render.com/api
-REACT_APP_ENV=production
+# Frontend (React)3 dec 24
+REACT_APP_API_URL=https://itransition-task4-web-application-with-pha3.onrender.com
 
-----
-#JWT_SECRET_KEY=
+
+#JWT_SECRET_KEY=FROM python:3.9-slim3.
