Docker up sucessfully, .evn file created, database_url, react_app_api_url and secret keys.

--- a/.env
+++ b/.env
@@ -3,10 +3,8 @@
 # Backend (Flask)2 dec 24
 FLASK_APP=app.py
 FLASK_ENV=production
-#FLASK_RUN_HOST=0.0.0.0
-
+FLASK_RUN_HOST=0.0.0.0
 DATABASE_URL=postgresql://database_9xnf_user:J8wawyfFzqF0sjWrAzETs8ZV8p1NvNbf@dpg-ct8kb568ii6s73cbsem0-a:5432/Database
-
 JWT_SECRET_KEY=secrets.token_hex(32)
 SECRET_KEY=secrets.token_hex(32)
 DEBUG=False
@@ -15,4 +13,5 @@ DEBUG=False
 REACT_APP_API_URL=https://itransition-task4-web-application-with-pha3.onrender.com
 
 
-#JWT_SECRET_KEY=FROM python:3.9-slim3.
+REACT_APP_ENV=production
+JWT_SECRET_KEY=FROM python:3.9-slim3.
