--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 FLASK_APP=app.py
 FLASK_ENV=production
 FLASK_RUN_HOST=0.0.0.0
-DATABASE_URL=postgresql://database_9xnf_user:J8wawyfFzqF0sjWrAzETs8ZV8p1NvNbf@dpg-ct8kb568ii6s73cbsem0-a:5432/Database
+DATABASE_URL=postgresql://database_9xnf_user:J8wawyfFzqF0sjWrAzETs8ZV8p1NvNbf@dpg-ct8kb568ii6s73cbsem0-a.oregon-postgres.render.com:5432/database_9xnf
+
 JWT_SECRET_KEY=secrets.token_hex(32)
 SECRET_KEY=secrets.token_hex(32)
 DEBUG=False
